--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "node-red": {
     "nodes": {
       "supabase-config": "supabase-config.js",
-      "supabase-db": "supabase-db.js"
+      "supabase-db": "supabase-db.js",
+      "supabase-storage": "supabase-storage.js"
     }
   },
   "devDependencies": {
@@ -19,6 +20,7 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.1",
     "zod": "^3.23.8"
   }
 }
